# bombinger

./: .gitignore  Cargo.toml  GBVideos.go  README.md  bombinger.service  bombinger.timer  config.toml  main.go  types.go
src/: main.go  main.rs
src/GBVideos/: gbtypes.go  gbvideos.go  key.go
src/gbvideos/: gbtypes.go  gbvideos.go
