[package]
name = "bombinger"
version = "0.1.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "1.2"
chrono = {version = "0.4", features = ["serde"]}
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
